Feat: 1-3단계 피드백 반영