@@ -1,19 +1,21 @@
 package model;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class RacingGame {
+
+    private static final String CAR_STATUS_SEPARATOR = " : "; // 자동차 상태 구분자 설정
+    private static final String DASH = "-"; // 자동차 이동 위치 기호 설정
 
     private final List<Car> cars;
     private final RandomNumberGenerator randomNumberGenerator;
 
     public RacingGame(List<Car> cars, RandomNumberGenerator randomNumberGenerator) {
-        this.cars = List.copyOf(cars);
+        this.cars = cars;
         this.randomNumberGenerator = randomNumberGenerator;
     }
 
-    // 한 라운드 동안의 레이스 진행
+    // 한 라운드 진행
     public void raceSingleRound() {
         for (Car car : cars) {
             int randomNum = randomNumberGenerator.generate();
@@ -21,12 +23,15 @@ public class RacingGame {
         }
     }
 
-    public List<Car> getCars() {
-        return cars;
+    // 자동차 상태 출력
+    public List<String> getRaceStatus() {
+        return cars.stream()
+                .map(car -> car.getCars() + CAR_STATUS_SEPARATOR + DASH.repeat(car.getPosition()))
+                .toList();
     }
 
-    // 우승자 반환
-    public List<Car> getWinners() {
+    // 우승자 출력
+    public List<String> getWinners() {
         int maxPosition = cars.stream()
                 .mapToInt(Car::getPosition)
                 .max()
@@ -34,6 +39,7 @@ public class RacingGame {
 
         return cars.stream()
                 .filter(car -> car.getPosition() == maxPosition)
-                .collect(Collectors.toList());
+                .map(Car::getCars)
+                .toList();
     }
 }
